fix spacing issues under info images

--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ li a {
     width: 200px;
     height: auto;
     border-radius: 3px;
-    margin: 10px 5px 0 5px;
+    margin: 10px 5px 20px 5px;
     box-shadow: 10px 10px 15px 0 rgba(0,0,0,0.3);
 }
 
